# veritrix-backend-py

./: Dockerfile.clickhouse  README.md  docker-compose.yml  pyproject.toml  render.yaml
api/: auth.py  main.py  models.py
api/api_docs/: README.md  authentication.md  errors.md  openapi.yaml
api/db/: clickhouse.py  postgres.py
api/routes/: agents.py  me.py  metrics.py  organization.py  projects.py  traces.py
api/services/: onboarding.py  organization.py  projects.py  traces.py
api/tests/: conftest.py  test_auth_organization.py  test_db_errors.py  test_onboarding.py  test_organization_billing.py  test_projects.py  test_routes.py  test_trace_service.py
e2e/: .env.example  README.md  run-all.sh
e2e/crewai/: README.md  agent.py  requirements.txt  run.sh  validate.sh
e2e/customer-service/: README.md  agent.py  run.sh  validate.sh
e2e/lib/: common.sh  constants.py
e2e/manual/: README.md  agent.py  validate.sh
ingest/: __init__.py  auth.py  clickhouse.py  main.py  models.py  postgres.py  rate_limit.py
ingest/api_docs/: README.md  authentication.md  errors.md  openapi.yaml
ingest/routes/: spans.py
ingest/tests/: conftest.py  test_spans.py  test_spans_integration.py
scripts/: add_clerk_org_id.sql  add_onboarding_profiles.sql  clickhouse-default-user.xml  crewai_agent.py  customer_service_agent.py  e2e_test_agent.py  init_clickhouse.sql  init_postgres.sql  migrate_org_members.sql  reset_postgres.sh  validate_e2e.sh
shared/: .env.example  __init__.py  config.py  pricing.py  span_schema.py  usage.py
shared/tests/: test_pricing.py
(+22 files in other folders)
